--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -33,10 +33,10 @@ jobs:
       run: |
         packages=$(jq -c '.packages."x86_64-linux" | keys' < flake.json)
         printf "::set-output name=packages::%s" "$packages"
-    - id: gen_checks
-      run: |
-        checks=$(jq -c '.checks."x86_64-linux" | keys' < flake.json)
-        printf "::set-output name=checks::%s" "$checks"
+    #- id: gen_checks
+    #  run: |
+    #    checks=$(jq -c '.checks."x86_64-linux" | keys' < flake.json)
+    #    printf "::set-output name=checks::%s" "$checks"
 
   update_flake:
     runs-on: ubuntu-20.04
@@ -103,41 +103,41 @@ jobs:
     - name: Build everything
       run: nix build .#${{ matrix.package }}
 
-  build_checks:
-    runs-on: ubuntu-20.04
-    needs: [generate_matrix, update_flake]
-    strategy:
-      fail-fast: false
-      max-parallel: 5
-      matrix:
-        check: ${{fromJson(needs.generate_matrix.outputs.checks)}}
-    steps:
-    - name: Clone repository
-      uses: actions/checkout@v3
-      with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
-    - name: Install nix
-      uses: cachix/install-nix-action@v17
-      with:
-        extra_nix_config: |
-          auto-optimise-store = true
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-          experimental-features = nix-command flakes
-          substituters = https://cache.nixos.org/ https://nix-community.cachix.org
-          trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
-        install_url: https://releases.nixos.org/nix/nix-2.7.0/install
-    - name: Set up cachix
-      uses: cachix/cachix-action@master # pathsToPush, please update once we have v11!
-      with:
-        name: shawn8901
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-        skipPush: true
-    - name: Restore flake.lock
-      uses: actions/download-artifact@v3
-      with:
-        name: flake_lock
-    - name: Build everything
-      run: nix build .#checks.x86_64-linux.${{ matrix.check }} --no-link
+  #build_checks:
+  #  runs-on: ubuntu-20.04
+  #  needs: [generate_matrix, update_flake]
+  #  strategy:
+  #    fail-fast: false
+  #    max-parallel: 5
+  #    matrix:
+  #      check: ${{fromJson(needs.generate_matrix.outputs.checks)}}
+  #  steps:
+  #  - name: Clone repository
+  #    uses: actions/checkout@v3
+  #    with:
+  #      token: '${{ secrets.GITHUB_TOKEN }}'
+  #  - name: Install nix
+  #    uses: cachix/install-nix-action@v17
+  #    with:
+  #      extra_nix_config: |
+  #        auto-optimise-store = true
+  #        access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+  #        experimental-features = nix-command flakes
+  #        substituters = https://cache.nixos.org/ https://nix-community.cachix.org
+  #        trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+  #      install_url: https://releases.nixos.org/nix/nix-2.7.0/install
+  #  - name: Set up cachix
+  #    uses: cachix/cachix-action@master # pathsToPush, please update once we have v11!
+  #    with:
+  #      name: shawn8901
+  #      authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+  #      skipPush: true
+  #  - name: Restore flake.lock
+  #    uses: actions/download-artifact@v3
+  #    with:
+  #      name: flake_lock
+  #  - name: Build everything
+  #    run: nix build .#checks.x86_64-linux.${{ matrix.check }} --no-link
 
   check_flake:
     runs-on: ubuntu-20.04
@@ -168,7 +168,7 @@ jobs:
   push_update:
     runs-on: ubuntu-20.04
     permissions: write-all
-    needs: [update_flake, build_flake, build_checks, check_flake]
+    needs: [update_flake, build_flake,  check_flake] # build_checks,
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
