--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -133,7 +133,7 @@ jobs:
   push_update:
     runs-on: ubuntu-20.04
     permissions: write-all
-    needs: [update_flake, build_flake,  check_flake] # build_checks,
+    needs: [update_flake, build_flake,  check_flake]
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
