--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -99,7 +99,11 @@ jobs:
     - name: Build everything
       run: |
         (while true; do 
+              echo "----------------------------------"
+              ps aux | sort -nrk 3,3 | head -n 5
+              echo "----------------------------------"
               df -h
+              echo "----------------------------------"
               sleep 15
               done) &
         nix build .#${{ matrix.package }}
