--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -110,7 +110,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        machines: ${{ fromJson(needs.generate_matrix.outputs.machines) }}
+        machine: ${{ fromJson(needs.generate_matrix.outputs.machines) }}
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
@@ -146,7 +146,7 @@ jobs:
               echo "----------------------------------"
               sleep 15
               done) &
-        nix build --print-build-logs .#${{ matrix.machines }}
+        nix build --print-build-logs .#${{ matrix.machine }}
         
 
   check_flake:
