--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -26,15 +26,11 @@ jobs:
           substituters = https://cache.nixos.org/ https://nix-community.cachix.org
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
         install_url: https://releases.nixos.org/nix/nix-2.7.0/install
-    - name: Generate flake.json
+    - id: gen_outputs
       run: |
         nix flake show --allow-import-from-derivation --json > flake.json
-    - id: gen_packages
-      run: |
         packages=$(jq '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") | not))' < flake.json)
         printf "::set-output name=packages::%s" "$packages"
-    - id: gen_machines
-      run: |
         machines=$(jq '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/")))' < flake.json)
         printf "::set-output name=machines::%s" "$machines"
 
