--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -105,7 +105,7 @@ jobs:
         
   build_machines:
     runs-on: ubuntu-22.04
-    needs: [build_packages]
+    needs: [generate_matrix,build_packages]
     strategy:
       fail-fast: false
       max-parallel: 2
