--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -32,12 +32,10 @@ jobs:
     - id: gen_packages
       run: |
         packages=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") | not))' < flake.json)
-        printf "packages::%s" "$packages"
         printf "::set-output name=packages::%s" "$packages"
     - id: gen_machines
       run: |
         machines=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") ))' < flake.json)
-        printf "machines::%s" "$machines"
         printf "::set-output name=machines::%s" "$machines"
 
   update_flake:
@@ -76,7 +74,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        package: ${{ fromJson(needs.generate_matrix.outputs.packages) }}
+        package: ${{fromJson(needs.generate_matrix.outputs.packages)}}
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
@@ -107,12 +105,12 @@ jobs:
         
   build_machines:
     runs-on: ubuntu-22.04
-    needs: [ generate_matrix, update_flake, build_packages]
+    needs: [generate_matrix, update_flake]
     strategy:
       fail-fast: false
       max-parallel: 2
       matrix:
-        machine: ${{ fromJson(needs.generate_matrix.outputs.machines) }}
+        machine: ${{fromJson(needs.generate_matrix.outputs.machines)}}
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
