--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -141,7 +141,7 @@ jobs:
   push_update:
     runs-on: ubuntu-20.04
     permissions: write-all
-    needs: [update_flake, build_machines,  check_flake]
+    needs: [update_flake, check_flake, build_packages, build_machines]
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
