--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -109,7 +109,7 @@ jobs:
     steps:
     - name: Build everything
       run: |
-        echo "${{fromJson(needs.generate_matrix.outputs.machines)}}"
+        echo "${{needs.generate_matrix.outputs.machines}}"
 
   check_flake:
     runs-on: ubuntu-20.04
