--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -186,6 +186,7 @@ jobs:
     - name: Create and merge PR
       run: |
         git switch -c updates-${{ github.run_id }}
+        git diff-index --quiet HEAD -- && echo "no changes" && exit 0
         git commit -am "flake.lock: Update"
         git push -u origin updates-${{ github.run_id }}
         PR=$(gh pr create \
