--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -28,7 +28,7 @@ jobs:
         install_url: https://releases.nixos.org/nix/nix-2.9.1/install
     - name: Generate flake.json
       run: |
-        nix flake show --allow-import-from-derivation --json > flake.json
+        nix flake show --json > flake.json
     - id: gen_packages
       run: |
         packages=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") | not))' < flake.json)
