--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -56,7 +56,7 @@ jobs:
       run: |
         git config user.email git@pointjig.de
         git config user.name "Git Bot"
-        cat /etc/nix/nix.conf
+        nix show-config | grep access
     - name: Update the flake
       run: nix flake update
     - name: Store flake.lock
