--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         extra_nix_config: |
           auto-optimise-store = true
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          access-tokens = ${{ secrets.GH_TOKEN }}
           experimental-features = nix-command flakes
           substituters = https://cache.nixos.org/ https://nix-community.cachix.org https://shawn8901.cachix.org
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= shawn8901.cachix.org-1:7RAYBGET4e+szLrg86T9PP1vwDp+T99Fq0sTDt3B2DA=
@@ -48,7 +48,7 @@ jobs:
       with:
         extra_nix_config: |
           auto-optimise-store = true
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          access-tokens = ${{ secrets.GH_TOKEN }}
           experimental-features = nix-command flakes
           substituters = https://cache.nixos.org/ https://nix-community.cachix.org https://shawn8901.cachix.org
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= shawn8901.cachix.org-1:7RAYBGET4e+szLrg86T9PP1vwDp+T99Fq0sTDt3B2DA=
