--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Install nix
       uses: cachix/install-nix-action@v17
       with:
@@ -42,7 +42,7 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Install nix
       uses: cachix/install-nix-action@v17
       with:
@@ -77,7 +77,7 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Install nix
       uses: cachix/install-nix-action@v17
       with:
@@ -112,7 +112,7 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Install nix
       uses: cachix/install-nix-action@v17
       with:
@@ -143,13 +143,13 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Install nix
       uses: cachix/install-nix-action@v17
       with:
         extra_nix_config: |
           auto-optimise-store = true
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          access-tokens = github.com=${{ secrets.GH_TOKEN }}
           experimental-features = nix-command flakes
           substituters = https://cache.nixos.org/ https://nix-community.cachix.org https://shawn8901.cachix.org
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= shawn8901.cachix.org-1:7RAYBGET4e+szLrg86T9PP1vwDp+T99Fq0sTDt3B2DA=
@@ -169,7 +169,7 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v3
       with:
-        token: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GH_TOKEN }}'
     - name: Restore flake.lock
       uses: actions/download-artifact@v3
       with:
