--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -119,7 +119,7 @@ jobs:
   push_update:
     runs-on: ubuntu-20.04
     permissions: write-all
-    needs: [build_machines]
+    needs: [build_packages,build_machines]
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
