--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -53,7 +53,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        package: ${{fromJson(needs.generate_matrix.outputs.packages)}}
+        package: ${{fromJson(needs.update_flake.outputs.packages)}}
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
@@ -88,7 +88,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        machine: ${{fromJson(needs.generate_matrix.outputs.machines)}}
+        machine: ${{fromJson(needs.update_flake.outputs.machines)}}
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
