--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   generate_matrix:
-    needs: [ check_flake ]
+    needs: [ update_flake ]
     runs-on: ubuntu-22.04
     outputs:
       packages: ${{ steps.gen_packages.outputs.packages }}
@@ -63,7 +63,7 @@ jobs:
 
   build_packages:
     runs-on: ubuntu-22.04
-    needs: [generate_matrix, check_flake]
+    needs: [generate_matrix]
     strategy:
       fail-fast: false
       max-parallel: 5
@@ -155,12 +155,12 @@ jobs:
         name: flake_lock
     - name: Build everything
       run: |
-        nix flake check --keep-going
+        nix flake check
         
   push_update:
     runs-on: ubuntu-20.04
     permissions: write-all
-    needs: [build_packages, build_machines]
+    needs: [build_packages, build_machines, check_flake]
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
