--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -66,7 +66,7 @@ jobs:
     needs: [generate_matrix]
     strategy:
       fail-fast: false
-      max-parallel: 5
+      max-parallel: 10
       matrix:
         package: ${{fromJson(needs.generate_matrix.outputs.packages)}}
     steps:
@@ -153,7 +153,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: flake_lock
-    - name: Build everything
+    - name: Check Flake
       run: |
         nix flake check
         
