--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -31,11 +31,11 @@ jobs:
     - id: gen_packages
       run: |
         packages=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") | not))' < flake.json)
-        printf "::set-output name=packages::%s" "$packages"
+        printf "name=packages::%s >> $GITHUB_ENV" "$packages"
     - id: gen_machines
       run: |
         machines=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") ))' < flake.json)
-        printf "::set-output name=machines::%s" "$machines"
+        printf "name=machines::%s >> $GITHUB_ENV" "$machines"
 
   update_flake:
     runs-on: ubuntu-22.04
