--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -31,11 +31,11 @@ jobs:
     - id: gen_packages
       run: |
         packages=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") | not))' < flake.json)
-        printf "packages='%s' >> $GITHUB_ENV" "$packages"
+        echo packages='$packages' >> $GITHUB_ENV
     - id: gen_machines
       run: |
         machines=$(jq -c '.packages."x86_64-linux" | keys | map(select(. | contains ("machines/") ))' < flake.json)
-        printf "machines='%s' >> $GITHUB_ENV" "$machines"
+        echo machines='$machines' >> $GITHUB_ENV
 
   update_flake:
     runs-on: ubuntu-22.04
