--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -98,7 +98,8 @@ jobs:
    
   build_machines:
     runs-on: ubuntu-22.04
-    needs: [build_packages, check_flake]
+    # Matrix has to be referenced here, otherwise we can not reference its output.
+    needs: [generate_matrix, build_packages, check_flake]
     strategy:
       fail-fast: false
       max-parallel: 5
